--- a/Zero_Engine/Zero_Engine/imgui.ini
+++ b/Zero_Engine/Zero_Engine/imgui.ini
@@ -8,3 +8,23 @@ Pos=160,128
 Size=550,680
 Collapsed=0
 
+[Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[About ImGui]
+Pos=82,48
+Size=533,86
+Collapsed=0
+
+[About Zero Engine]
+Pos=41,44
+Size=351,154
+Collapsed=0
+
