--- a/Zero_Engine/Zero_Engine/imgui.ini
+++ b/Zero_Engine/Zero_Engine/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [ImGui Demo]
-Pos=160,128
-Size=550,680
+Pos=122,46
+Size=413,388
 Collapsed=0
 
 [Example: Console]
@@ -24,7 +24,42 @@ Size=533,86
 Collapsed=0
 
 [About Zero Engine]
-Pos=41,44
+Pos=80,141
 Size=351,154
+Collapsed=0
+
+[Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Example: Auto-resizing window]
+Pos=60,60
+Size=568,386
+Collapsed=0
+
+[Same title as another window##1]
+Pos=43,81
+Size=140,78
+Collapsed=0
+
+[Same title as another window##2]
+Pos=100,200
+Size=449,61
+Collapsed=0
+
+[###AnimatedTitle]
+Pos=100,300
+Size=246,48
+Collapsed=0
+
+[Example: Layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Example: Custom rendering]
+Pos=95,0
+Size=350,560
 Collapsed=0
 
