--- a/Zero_Engine/Zero_Engine/Zero_Engine.vcxproj
+++ b/Zero_Engine/Zero_Engine/Zero_Engine.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="ModuleAudio.cpp" />
     <ClCompile Include="ModuleCamera3D.cpp" />
     <ClCompile Include="ModuleEditor.cpp" />
+    <ClCompile Include="ModuleFBXLoader.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModulePhysics3D.cpp" />
     <ClCompile Include="ModuleRenderer3D.cpp" />
@@ -267,6 +268,7 @@
     <ClInclude Include="ModuleCamera3D.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleEditor.h" />
+    <ClInclude Include="ModuleFBXLoader.h" />
     <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="ModulePhysics3D.h" />
     <ClInclude Include="ModuleRenderer3D.h" />
