PhysX Body in progress

--- a/Zero_Engine/Zero_Engine/Zero_Engine.vcxproj.filters
+++ b/Zero_Engine/Zero_Engine/Zero_Engine.vcxproj.filters
@@ -318,7 +318,12 @@
     <ClInclude Include="ModuleFBXLoader.h">
       <Filter>Sources\Modules</Filter>
     </ClInclude>
-    <ClInclude Include="ModulePhysX.h" />
+    <ClInclude Include="ModulePhysX.h">
+      <Filter>Sources\Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysXBody.h">
+      <Filter>Sources\Helpers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="log.cpp">
@@ -495,7 +500,12 @@
     <ClCompile Include="ModuleFBXLoader.cpp">
       <Filter>Sources\Modules</Filter>
     </ClCompile>
-    <ClCompile Include="ModulePhysX.cpp" />
+    <ClCompile Include="ModulePhysX.cpp">
+      <Filter>Sources\Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysXBody.cpp">
+      <Filter>Sources\Helpers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="MathGeoLib\Math\float2.inl">
