--- a/Zero_Engine/Zero_Engine/Zero_Engine.vcxproj.filters
+++ b/Zero_Engine/Zero_Engine/Zero_Engine.vcxproj.filters
@@ -339,6 +339,12 @@
     <ClInclude Include="ComponentMaterial.h">
       <Filter>Sources\Components</Filter>
     </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>Sources\Helpers</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Sources\Helpers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="log.cpp">
