--- a/Zero_Engine/Zero_Engine/imgui.ini
+++ b/Zero_Engine/Zero_Engine/imgui.ini
@@ -1,6 +1,6 @@
 [Debug]
 Pos=7,36
-Size=399,217
+Size=498,458
 Collapsed=0
 
 [ImGui Demo]
@@ -61,5 +61,10 @@ Collapsed=0
 [Example: Custom rendering]
 Pos=95,0
 Size=350,560
+Collapsed=0
+
+[GameObjects]
+Pos=9,33
+Size=337,173
 Collapsed=0
 
