GO Translation and Scale with UI

--- a/Zero_Engine/Zero_Engine/imgui.ini
+++ b/Zero_Engine/Zero_Engine/imgui.ini
@@ -4,8 +4,8 @@ Size=498,458
 Collapsed=0
 
 [ImGui Demo]
-Pos=847,393
-Size=232,294
+Pos=83,224
+Size=868,576
 Collapsed=0
 
 [Example: Console]
@@ -64,7 +64,22 @@ Size=350,560
 Collapsed=0
 
 [GameObjects]
-Pos=9,33
-Size=337,173
+Pos=5,32
+Size=419,354
+Collapsed=0
+
+[Transform]
+Pos=600,57
+Size=335,324
+Collapsed=0
+
+[Mesh]
+Pos=607,547
+Size=362,124
+Collapsed=0
+
+[Material]
+Pos=600,409
+Size=338,102
 Collapsed=0
 
