Rotation editable with UI

--- a/Zero_Engine/Zero_Engine/imgui.ini
+++ b/Zero_Engine/Zero_Engine/imgui.ini
@@ -64,8 +64,8 @@ Size=350,560
 Collapsed=0
 
 [GameObjects]
-Pos=8,42
-Size=92,71
+Pos=5,25
+Size=337,207
 Collapsed=0
 
 [Transform]
@@ -81,5 +81,10 @@ Collapsed=0
 [Material]
 Pos=600,409
 Size=338,102
+Collapsed=0
+
+[Properties]
+Pos=1005,25
+Size=275,500
 Collapsed=0
 
